# NeuralNetworkInC

./: CMakeLists.txt  README.md  main.c  main.h  main.h.gch
Config/: config.c
Math/: Softmax.c  Softmax.h  Tensor.c  Tensor.h
Tokeniser/: PositionalEncoding.c  PositionalEncoding.h  RandomWeighting.c  RandomWeighting.h  tokeniser.c  tokeniser.h
Transformer/: MLP.c  MLP.h  SelfAttenion.c  SelfAttenion.h
include/deepc/: attention.h  autograd.h  backend.h  config.h  core.h  cuda_kernels.h  data.h  encoding.h  init.h  linear.h  main.h  nn.h  softmax.h  tensor.h  tokeniser.h
src/backend/ops_cpu/: softmax.c
src/backend/ops_cuda/: activations.cu  embeddings.cu  linalg.cu  softmax.cu
src/core/: config.c  init.c  tensor.c
src/data/: encoding.c  tokeniser.c
src/nn/layers/: attention.c  linear.c
src/nn/modules/: mlp.c
